fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ p {
 }
 section {
    height: 100vh;
-   overflow-y: auto;
+   overflow: hidden;
 }
 svg, text, tspan, path, g {
    font-family: 'DM Sans', sans-serif;
